# observable-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  run_eval.py
data/: chunking_description.txt  chunks.jsonl
gateways/: anthropic_gateway.py  base.py  openai_gateway.py
ingest/: chunker.py  embedder.py  extractor.py  pipeline.py  query.py
tests/: test_anthropic_gateway.py  test_app.py  test_chunker.py  test_embedder.py  test_extractor.py  test_openai_gateway.py  test_pipeline.py  test_query.py
