[project]
name = "observable-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.100.0",
    "fastapi>=0.136.1",
    "httpx>=0.28.1",
    "langfuse>=4.6.1",
    "openai>=2.36.0",
    "opentelemetry-instrumentation-anthropic>=0.60.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
    "uvicorn>=0.46.0",
]
